# hackthonFingerprint

./: .gitignore  Cargo.toml  Dockerfile  README.md  pubspec.yaml  run_docker.bat
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/hassansharara/hton/hweb/: MainActivity.kt
hackthon/: asgi.py  cnn.py  mid.py  settings.py  sift.py  stn_siamese.py  urls.py  views.py  wsgi.py
hackthon/static/: fingerprint_cnn.pth  hassan.css
hackthon/templates/fingerprint/: fingerprint-matcher.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/AIModel/: ai_model.dart
lib/Constants/Api/: api.dart
lib/Constants/Images/: images.dart
lib/Services/Init/: init.dart
lib/ui/Drawer/: drawer.dart
lib/ui/Main/: main.dart
lib/ui/launcher/: launcher.dart
mount/: Cargo.toml
src/: main.rs
src/ai/: mod.rs
src/ai/matcher/: mod.rs
src/ai_server/: mod.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
